--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,18 @@ ul li a {
     letter-spacing: 1px;
 }
 
+h2{
+    font-family: 'Century Gothic', Helvetica, Arial, sans-serif;
+    text-align: center;
+    letter-spacing: 2px;
+    margin-top: 100px;
+    font-size: 30px;
+    margin-bottom: 12px;
+    color: white;
+    text-transform: uppercase;
+    font-weight: 400;
+}
+
 ul{
     list-style: none;
     text-align: center;
@@ -47,19 +59,47 @@ li{
     line-height: 1.6em;
     font-weight: 300;
     
-    line-height: 40px;
 }
 
 a{
     text-decoration: none;
-    color: #000030;
-    outline: 0;
-    cursor: pointer;
+    color: #000000;
     
     transition-property: color;
     transition-duration: 0.5s;
     transition-timing-function: ease-in;
     transition-delay: initial;
+}
+
+.displayVertical{
+  display: inline-block;
+}
+
+.innerContainer{
+    font-family: 'Century Gothic', Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    border-radius: 5px;
+    background: white;
+    padding: 2px;
+    overflow: hidden;
+    text-align: center;
+    width:25%;
+    
+    position: relative;
+    min-height: 1px;
+    padding-left: 0.9375rem;
+    padding-right: 0.9375rem;
+}
+
+.displayHorizontal{
+  display: flex;
+  text-align: center;
+}
+
+
+.productImage{
+  height: 300px;
+  width: 100%;
 }
 
 
@@ -68,7 +108,7 @@ body{
 }
 
 .mySlides {display: none;}
-.slideImage{vertical-align: middle; height:500px; width: 800px !important; }
+.slideImage{vertical-align: middle; height:500px; width: 850px !important; }
 
 /* Slideshow container */
 .slideshow-container {
