--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,36 @@ ul li a {
     letter-spacing: 1px;
 }
 
+button{
+    width: 55px;
+    height: 35px;
+    font-family: 'Century Gothic', Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    border-radius: 12px;
+    margin-bottom: 15px;
+    
+    background-color: #e7e7e7;
+    color: #555555;
+    
+    
+    
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+
+
+button:hover {
+    background-color: #555555;
+    color: white;
+}
+
 h2{
     font-family: 'Century Gothic', Helvetica, Arial, sans-serif;
     text-align: center;
     letter-spacing: 2px;
     margin-top: 100px;
     font-size: 30px;
-    margin-bottom: 12px;
     color: white;
     text-transform: uppercase;
     font-weight: 400;
@@ -76,19 +99,30 @@ a{
 }
 
 .innerContainer{
-    font-family: 'Century Gothic', Helvetica, Arial, sans-serif;
-    font-weight: 400;
+      font-weight: 400;
     border-radius: 5px;
+    font-family: 'Century Gothic', Helvetica, Arial, sans-serif;
     background: white;
     padding: 2px;
     overflow: hidden;
-    text-align: center;
     width:25%;
-    
-    position: relative;
     min-height: 1px;
-    padding-left: 0.9375rem;
-    padding-right: 0.9375rem;
+    position: relative;
+    text-align: center;
+    margin-left:20px;
+}
+
+.nameOfProduct{
+  
+  font-family: 'Century Gothic', Helvetica, Arial, sans-serif;
+  margin-top: 20px;
+  color: grey;
+  width:230px;
+  position:relative;
+  font-weight: 400;
+  font-size: 20px;
+  
+  margin-bottom: 10px;
 }
 
 .displayHorizontal{
