--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,34 @@
 #imageLogo{
     text-align: center;
     width: 100%;
-    padding-left: 70px;
+    padding-left: 140px;
 }
 
 #categories{
   margin-top:5px;
+}
+
+h1{
+  
+    font-family: 'Century Gothic', Helvetica, Arial, sans-serif;
+    font-size: 30px;
+    font-weight: 400;
+    
+    color: white;
+  
+    margin-top: 65px;
+}
+
+.description{
+  color:white;
+  font-size: 19px;
+  
+  
+}
+
+.about-image{
+  height: 500px;
+    width: 400px;
 }
 
 
