--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ button:hover {
     color: white;
 }
 
+
 h2{
     font-family: 'Century Gothic', Helvetica, Arial, sans-serif;
     text-align: center;
@@ -135,6 +136,11 @@ li{
     line-height: 1.6em;
     font-weight: 300;
     
+}
+
+.list{
+  color:white;
+  display:inherit !important;
 }
 
 a{
