--- a/css/style.css
+++ b/css/style.css
@@ -351,7 +351,7 @@ h4{
 
 .outer-container{
   display:flex;
-  background-color: #8a8a8a69; 
+  background-color:#222222; 
   border:1px solid black;
   margin-left: auto;
   margin-right:auto;
