--- a/css/style.css
+++ b/css/style.css
@@ -424,8 +424,24 @@ h4{
     transition-duration: 0.4s;
 }
 
+.tdData{
+  display:block;
+  margin-right: -144px !important;
+}
 
+iframe{
+  width: 52% !important;
+  display:block;
+  height: 25px !important;
+  margin-top:5px;
+}
 
+.error{
+  color:#f2f2f2;
+  background-color: red;
+  text-align: center;
+  font-size: 20px;
+}
 
 /* Define how SqPaymentForm iframes should look */
 /*.sq-input {*/
@@ -460,66 +476,6 @@ h4{
 /*  cursor:pointer;*/
 /*}*/
 
-
-/* Customize the "{{Wallet}} not enabled" message */
-/*.wallet-not-enabled {*/
-/*  min-width: 200px;*/
-/*  min-height: 40px;*/
-/*  max-height: 64px;*/
-/*  padding: 0;*/
-/*  margin: 10px;*/
-/*  line-height: 40px;*/
-/*  background: #eee;*/
-/*  border-radius: 5px;*/
-/*  font-weight: lighter;*/
-/*  font-style: italic;*/
-/*  font-family: inherit;*/
-/*  display: block;*/
-/*}*/
-
-/* Customize the Apple Pay on the Web button */
-/*.button-apple-pay {*/
-/*  min-width: 200px;*/
-/*  min-height: 40px;*/
-/*  max-height: 64px;*/
-/*  padding: 0;*/
-/*  margin: 10px;*/
-/*  background-image: -webkit-named-image(apple-pay-logo-white);*/
-/*  background-color: black;*/
-/*  background-size: 100% 60%;*/
-/*  background-repeat: no-repeat;*/
-/*  background-position: 50% 50%;*/
-/*  border-radius: 5px;*/
-/*  cursor:pointer;*/
-/*  display: none;*/
-/*}*/
-
-/* Customize the Masterpass button */
-/*.button-masterpass {*/
-/*  min-width: 200px;*/
-/*  min-height: 40px;*/
-/*  max-height: 40px;*/
-/*  padding: 0;*/
-/*  margin: 10px;*/
-/*  background-image: url(https://static.masterpass.com/dyn/img/btn/global/mp_chk_btn_147x034px.svg);*/
-/*  background-color: black;*/
-/*  background-size: 100% 100%;*/
-/*  background-repeat: no-repeat;*/
-/*  background-position: 50% 50%;*/
-/*  border-radius: 5px;*/
-/*  border-color: rgb(255, 255, 255);*/
-/*  cursor:pointer;*/
-/*  display: none;*/
-/*}*/
-
-/*#sq-walletbox {*/
-/*  float:left;*/
-/*  margin:5px;*/
-/*  padding:10px;*/
-/*  text-align: center;*/
-/*  vertical-align: top;*/
-/*  font-weight: bold;*/
-/*}*/
 
 /*#sq-ccbox {*/
 /*  float:left;*/
